Data Read from Signup & Login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,10 @@ spring.application.name=e-society
 #server
 server.port=9999
 #database
-spring.datasource.url=jdbc:mysql://localhost:3306/e-society
-spring.datasource.name=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/society
+spring.datasource.username=root
+spring.datasource.password=Tushar@1501
+
 #hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
