--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,15 @@ spring.jpa.properties.hibernate.formate_sql=true
 #views
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+# Gmail SMTP Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+#your email
+spring.mail.username=chaudharitd1501@gmail.com    
+#third party apppasswords not your email https://myaccount.google.com/apppasswords
+spring.mail.password=xmbvtreuadsshnds    
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
