--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.2</version>
+		<version>3.4.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.esociety</groupId>
@@ -65,6 +65,14 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<!--Cloidinari dependency-->
+ 		<dependency>
+  			<groupId>com.cloudinary</groupId>
+  			<artifactId>cloudinary-http44</artifactId>
+  			<version>1.33.0</version>
+  		</dependency>
+		
+		
 		
 		<dependency>
 		    <groupId>org.springframework.security</groupId>
